--- a/ValorantApp/Screen/WeaponsVC/WeaponsCollectionView/WeaponsCollectionViewCell.xib
+++ b/ValorantApp/Screen/WeaponsVC/WeaponsCollectionView/WeaponsCollectionViewCell.xib
@@ -25,6 +25,7 @@
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-valorant-100" translatesAutoresizingMaskIntoConstraints="NO" id="ikT-ul-IdM">
                                         <rect key="frame" x="0.0" y="0.0" width="383" height="155"/>
+                                        <color key="backgroundColor" red="0.8392156959" green="0.27450981740000002" blue="0.29803922770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="155" id="QYf-jX-zeI"/>
                                         </constraints>
@@ -35,7 +36,7 @@
                                             <constraint firstAttribute="height" constant="45" id="UFO-8z-5hp"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -60,6 +61,11 @@
                 <constraint firstAttribute="bottom" secondItem="hix-TU-unN" secondAttribute="bottom" id="gIm-gk-K8e"/>
             </constraints>
             <size key="customSize" width="383" height="127"/>
+            <connections>
+                <outlet property="weaponsCellView" destination="hix-TU-unN" id="R9D-gt-pi9"/>
+                <outlet property="weaponsImageView" destination="ikT-ul-IdM" id="rQ1-AV-Omo"/>
+                <outlet property="weaponsNameLabel" destination="bOQ-8t-grb" id="htU-3g-B2Z"/>
+            </connections>
             <point key="canvasLocation" x="478.98550724637687" y="79.017857142857139"/>
         </collectionViewCell>
     </objects>
