--- a/ValorantApp/Screen/MapsVC/MapsCollectionView/MapCollectionViewCell.xib
+++ b/ValorantApp/Screen/MapsVC/MapsCollectionView/MapCollectionViewCell.xib
@@ -4,22 +4,33 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MapCollectionViewCell" id="gTV-IL-0wX" customClass="MapCollectionViewCell" customModule="ValorantApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="600"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="600"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m20-ra-9WX">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
-                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="600"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="character" translatesAutoresizingMaskIntoConstraints="NO" id="rJ3-aH-cuI">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="600"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.8392156959" green="0.27450981740000002" blue="0.29803922770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="rJ3-aH-cuI" secondAttribute="bottom" id="2OI-ci-z6S"/>
+                            <constraint firstAttribute="width" constant="414" id="8ZT-IM-x61"/>
+                            <constraint firstItem="rJ3-aH-cuI" firstAttribute="leading" secondItem="m20-ra-9WX" secondAttribute="leading" id="D91-vi-0fN"/>
+                            <constraint firstAttribute="trailing" secondItem="rJ3-aH-cuI" secondAttribute="trailing" id="ZpJ-A5-14w"/>
+                            <constraint firstItem="rJ3-aH-cuI" firstAttribute="top" secondItem="m20-ra-9WX" secondAttribute="top" id="p5V-tf-Coh"/>
+                        </constraints>
                     </view>
                 </subviews>
             </view>
@@ -31,12 +42,13 @@
                 <constraint firstItem="m20-ra-9WX" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="kXe-zf-Ues"/>
             </constraints>
             <size key="customSize" width="50" height="182"/>
+            <connections>
+                <outlet property="mapIcon" destination="rJ3-aH-cuI" id="1hU-Es-RpX"/>
+            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="47.544642857142854"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="character" width="512" height="512"/>
     </resources>
 </document>
